added true details

--- a/vimukthi.html
+++ b/vimukthi.html
@@ -7,6 +7,9 @@
     <title>about me</title>
 </head>
 <body>
-    <p>vimukthi ela kollek</p>
+    <p>vimukthi ela kollek
+        vimukthi is not an ela kolla
+    </p>
+    
 </body>
 </html>
